[package]
name = "drugwars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ircie = { path = "../ircie" }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
chrono = { version = "0.4.24", features = ["serde"] }
tokio = { version = "1.28.2", features = ["full"] }
env_logger = "0.10.0"
rand = "0.8.5"
num-bigint = "0.4.3"
thiserror = "1.0.40"
itertools = "0.10.5"